fixed card z-index | used event delegation for navigation menu click

--- a/src/styles/pages/desktop-events.scss
+++ b/src/styles/pages/desktop-events.scss
@@ -205,7 +205,7 @@
 
     &.active {
       transform: scale(1.15);
-      z-index: 10;
+      z-index: 4;
     }
 
     &__divider {
